# otherus

./: .$would_pieces_outline.drawio.bkp  .gitignore  README.md  SETUP.md  main.py  requirements.txt  sitemap.json  world_pieces_outline.drawio  worldpieces.json
backend/: Dockerfile  environment.yml  main.py  requirements (3).txt  requirements.txt
backend/app/: config.py  main.py
backend/app/middleware/: auth.py
backend/tests/: conftest (2).py  test_auth.py  test_chat.py  test_experiments.py  test_profiles.py  test_users.py
frontend/: App.tsx  README.md  api_client.py  app.py  jest.config.js  package-lock.json  package.json  pyproject.toml  theme.py
frontend/assets/: styles.css
frontend/screens/: home_screen.py  login_screen.py  profile_screen.py  search_screen.py  settings_screen.py  user_detail_screen.py
frontend/src/__tests__/: DynamicForm.test.tsx  LoginScreen.test.tsx  SettingsScreen.test.tsx  api.test.ts  authStore.test.ts
frontend/src/components/form/: DynamicForm.tsx  MapField.tsx  MenuBar.tsx  ReadOnlyMapField.tsx  RichTextEditor.tsx
frontend/src/components/shared/: Button.tsx  Card.tsx
frontend/src/navigation/: MainTabNavigator.tsx  RootNavigator.tsx
frontend/src/screens/: AuthCallbackScreen.tsx  ChatListScreen.tsx  ChatRoomScreen.tsx  CommunityScreen.tsx  ExperimentDetailScreen.tsx  ExperimentEditorScreen.tsx  ExperimentsScreen.tsx  LoginScreen.tsx  ProfileDetailScreen.tsx  ProfileScreen.tsx  SettingsScreen.tsx
frontend/src/services/: api.ts
frontend/src/store/: authStore.ts
frontend/src/utils/: profileSchema.ts  theme.ts
(+12 files in other folders)
