[project]
name = "frontend"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Aaron E-J", email = "norply@otherrealm.org" }
]
dependencies = [
    "flet>=0.81.0"
]
[dependency-groups]
dev = [
    "flet-cli>=0.81.0",
    "flet-desktop>=0.81.0",
    "flet-web>=0.81.0",
]
[tool.flet]
org = "com.mycompany"
product = "frontend"
company = "Flet"
copyright = "Copyright (C) 2026 by The Other Realm"
[tool.flet.app]
path = ""
